syntax = "proto3";

package health;

import "base.proto";

message HealthRequest {
  string must_be_hello = 1;
}

message HealthResponse {
  base.Status status = 1;
  string version = 2;
}

service HealthService {
  rpc Check (HealthRequest) returns (HealthResponse);
}
